Create sass file structure; add line chart; enhance dashboard.

--- a/src/assets/sass/abstracts/_variables.scss
+++ b/src/assets/sass/abstracts/_variables.scss
@@ -1,10 +1,54 @@
-// colors
-$c-bills: rgba(0, 255, 0, .85);
-$c-food: rgba(245, 223, 95, .85);
-$c-travel: rgba(218, 112, 214, .85);
-$c-entertainment: rgba(255, 127, 80, .85);
-$c-shopping: rgba(64, 224, 208, .85);
-$c-education: rgba(255, 182, 193, .85);
-$c-household: rgba(135, 206, 235, .85);
-$c-sport: rgba(244, 164, 96, .85);
-$c-other: rgba(255, 215, 0, .85);
+// color palette
+$c-blue-200: rgb(190, 227, 248);
+$c-blue-300: rgb(144, 205, 244);
+$c-blue-400: rgb(99, 179, 237);
+$c-blue-500: rgb(66, 153, 225);
+$c-blue-600: rgb(49, 130, 206);
+$c-blue-header-1: rgb(0, 180, 219);
+$c-blue-header-2: rgb(0, 131, 176);
+$c-gray-200: rgb(237, 242, 247);
+$c-gray-300: rgb(226, 232, 240);
+$c-gray-400: rgb(203, 213, 224);
+$c-gray-500: rgb(160, 174, 192);
+$c-gray-600: rgb(113, 128, 150);
+$c-gray-700: rgb(74, 85, 104);
+$c-green-200: rgb(198, 246, 213);
+$c-green-300: rgb(154, 230, 180);
+$c-green-400: rgb(104, 211, 145);
+$c-green-500: rgb(72, 187, 120);
+$c-green-600: rgb(56, 161, 105);
+$c-indigo-200: rgb(195, 218, 254);
+$c-indigo-300: rgb(163, 191, 250);
+$c-indigo-400: rgb(127, 156, 245);
+$c-indigo-500: rgb(102, 126, 234);
+$c-indigo-600: rgb(90, 103, 216);
+$c-orange-200: rgb(254, 235, 200);
+$c-orange-300: rgb(251, 211, 141);
+$c-orange-400: rgb(246, 173, 85);
+$c-orange-500: rgb(237, 137, 54);
+$c-orange-600: rgb(221, 107, 32);
+$c-pink-200: rgb(254, 215, 226);
+$c-pink-300: rgb(251, 182, 206);
+$c-pink-400: rgb(246, 135, 179);
+$c-pink-500: rgb(237, 100, 166);
+$c-pink-600: rgb(213, 63, 140);
+$c-purple-200: rgb(233, 216, 253);
+$c-purple-300: rgb(214, 188, 250);
+$c-purple-400: rgb(183, 148, 244);
+$c-purple-500: rgb(159, 122, 234);
+$c-purple-600: rgb(128, 90, 213);
+$c-red-200: rgb(254, 215, 215);
+$c-red-300: rgb(254, 178, 178);
+$c-red-400: rgb(252, 129, 129);
+$c-red-500: rgb(245, 101, 101);
+$c-red-600: rgb(229, 62, 62);
+$c-teal-200: rgb(178, 245, 234);
+$c-teal-300: rgb(129, 230, 217);
+$c-teal-400: rgb(79, 209, 197);
+$c-teal-500: rgb(56, 178, 172);
+$c-teal-600: rgb(49, 151, 149);
+$c-yellow-200: rgb(254, 252, 191);
+$c-yellow-300: rgb(250, 240, 137);
+$c-yellow-400: rgb(246, 224, 94);
+$c-yellow-500: rgb(236, 201, 75);
+$c-yellow-600: rgb(214, 158, 46);
