--- a/src/assets/sass/base/_base.scss
+++ b/src/assets/sass/base/_base.scss
@@ -5,5 +5,23 @@
 }
 
 html {
+  color: $c-gray-600;
+  font-family: Arial, Helvetica, sans-serif;
   font-size: 75%;
+}
+
+.view-content {
+  padding-top: 6rem;
+}
+
+// typography
+p {
+  font-size: 1.2rem;
+}
+
+h2 {
+  font-size: 2rem;
+  font-weight: 300;
+  padding: 1rem;
+  text-transform: uppercase;
 }
