Dashboard layout; new transaction view and layout.

--- a/src/assets/sass/components/_header.scss
+++ b/src/assets/sass/components/_header.scss
@@ -7,7 +7,7 @@
   width: 100%;
   z-index: 100;
 
-  & a {
+  &__link {
     border: 2.5px solid transparent;
     color: inherit;
     font-size: 1.4rem;
