--- a/src/assets/sass/main.scss
+++ b/src/assets/sass/main.scss
@@ -7,6 +7,10 @@
 // custom grid system
 @import "./layout/grid";
 // reusable components
+@import "./components/buttons";
+@import "./components/cards";
+@import "./components/forms";
 @import "./components/header";
 // view-specific layouts
 @import "./views/dashboard";
+@import "./views/new";
