--- a/src/assets/sass/main.scss
+++ b/src/assets/sass/main.scss
@@ -13,4 +13,6 @@
 @import "./components/header";
 // view-specific layouts
 @import "./views/dashboard";
+@import "./views/history";
+@import "./views/landing";
 @import "./views/new";
