--- a/src/assets/sass/components/_forms.scss
+++ b/src/assets/sass/components/_forms.scss
@@ -3,6 +3,10 @@
   margin: 0 auto;
   max-width: 50rem;
 
+  @include res(phone) {
+    border-radius: 0;
+  }
+
   &--header {
     padding-bottom: 2rem;
     text-align: center;
@@ -12,6 +16,10 @@
 .form {
   margin: 0 auto;
   width: 50%;
+
+  @include res(phone) {
+    width: 80%;
+  }
 
   &__group {
     padding: .5rem;
@@ -91,6 +99,10 @@
     box-sizing: border-box;
     color: inherit;
     font-size: 1.4rem;
+
+    @include res(phone) {
+      border-radius: 0;
+    }
 
     &:focus {
       outline: none;
