--- a/src/assets/sass/components/_header.scss
+++ b/src/assets/sass/components/_header.scss
@@ -15,6 +15,10 @@
     line-height: 5rem;
     transition: all .2s ease;
 
+    @include res(phone) {
+      padding: 1.5rem 2.5rem;
+    }
+
     &, &:link, &:visited {
       text-decoration: none;
     }
@@ -29,4 +33,10 @@
 
 .logout {
   cursor: pointer;
+}
+
+.hideOnPhone {
+  @include res(phone) {
+    display: none;
+  }
 }
