--- a/src/assets/sass/components/_forms.scss
+++ b/src/assets/sass/components/_forms.scss
@@ -93,7 +93,7 @@
   }
 
   &__select {
-    background-color: transparent;
+    background-color: rgba(255, 255, 255, .01);
     border: 1px solid rgba($c-blue-header-1, .75);
     border-radius: 3px;
     box-sizing: border-box;
